syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.womenpower.userprofile";

service UserProfileService {
  rpc RegisterUser (RegisterRequest) returns (RegisterResponse);
  rpc GetUserSkills (UserRequest) returns (stream Skill);
}

message RegisterRequest {
  string name = 1;         // User's full name
  string email = 2;        // email
  string profession = 3;   // Occupation
}

message RegisterResponse {
  string user_id = 1;      //
  bool success = 2;        // Registration status
}

message UserRequest {
  string user_id = 1;      // user identifier
}

message Skill {
  string name = 1;         // Skill name
  string level = 2;        // Proficiency level
}